--- a/kernel/gcov/Makefile
+++ b/kernel/gcov/Makefile
@@ -7,7 +7,8 @@ if-lt = $(shell [ $(1) -lt $(2) ] && echo 1)
 
 ifeq ($(CONFIG_GCOV_FORMAT_3_4),y)
   cc-ver := 0304
-else ifeq ($(CONFIG_GCOV_FORMAT_4_7),y)
+else
+ifeq ($(CONFIG_GCOV_FORMAT_4_7),y)
   cc-ver := 0407
 else
 # Use cc-version if available, otherwise set 0
@@ -22,6 +23,7 @@ else
 # not defined during clean or to include Kbuild.include in
 # scripts/Makefile.clean. But the following workaround seems least invasive.
   cc-ver := $(if $(call cc-version),$(call cc-version),0)
+endif
 endif
 
 obj-$(CONFIG_GCOV_KERNEL) := base.o fs.o
